# AuthMap

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  action.yml  release.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detection_improvement.yml  feature_request.yml
.github/actions/authmap/: run.sh
.github/codeql/: codeql-config.yml
.github/workflows/: authmap-action-smoke.yml  codeql.yml  dependency-determinism.yml  docs.yml  performance.yml  release.yml  rust.yml  security.yml
ci/: perf-baseline.env
crates/authmap-adapters/: Cargo.toml
crates/authmap-adapters/src/: django.rs  lib.rs  nextjs.rs
crates/authmap-analysis/: Cargo.toml
crates/authmap-analysis/src/: drift.rs  lib.rs
crates/authmap-cli/: Cargo.toml
crates/authmap-cli/benches/: performance.rs
crates/authmap-cli/src/: main.rs
crates/authmap-cli/tests/: cli.rs
crates/authmap-config/: Cargo.toml
crates/authmap-config/src/: lib.rs
crates/authmap-core/: Cargo.toml
crates/authmap-core/src/: lib.rs
crates/authmap-core/tests/: schema_contract.rs
crates/authmap-discovery/: Cargo.toml
crates/authmap-discovery/src/: lib.rs
crates/authmap-parsers/: Cargo.toml
crates/authmap-parsers/src/: lib.rs
crates/authmap-report/: Cargo.toml
crates/authmap-report/src/: lib.rs
crates/authmap-report/tests/: markdown_golden.rs
crates/authmap-testkit/: Cargo.toml
crates/authmap-testkit/src/: lib.rs
crates/authmap-testkit/tests/: post_v1_workflow_regression.rs  realistic_smoke_regression.rs  route_inventory_regression.rs
docs/: ARCHITECTURE.md  CAPABILITIES.md  CONFIGURATION.md  DATA_HANDLING.md  DIAGNOSTICS.md  GITHUB_ACTION.md  IMPLEMENTATION_ARCHITECTURE.md  JSON_CONSUMERS.md  PARSERS_AND_ADAPTERS.md  PRODUCT_BRIEF.md  RELEASES.md  ROADMAP.md  SCHEMA.md  SUPPLY_CHAIN.md  USAGE.md  VERIFYING_RELEASES.md
examples/: authorization-map.authmap.json  route-inventory.authmap.json
schemas/: authmap.schema.json
scripts/: perf_guard.sh
tests/: README.md
tests/fixtures/diff/base/: app.py
tests/fixtures/diff/head/: app.py
tests/fixtures/django/accounts/: api_urls.py  services.py  urls.py  views.py
tests/fixtures/django/legacy/: urls.py  views.py
tests/fixtures/django/project/: urls.py
tests/fixtures/django/shared/generic/: __init__.py  object_views.py
tests/fixtures/express/: app.js
tests/fixtures/express/helpers/: app.js
tests/fixtures/express/routes/: admin.js  exported.ts  users.ts
tests/fixtures/fastapi/: main.py
tests/fixtures/fastapi/app/: main_relative.py
tests/fixtures/fastapi/app/factories/: collection.py  custom.py  nested.py
tests/fixtures/fastapi/app/routes/: users.py
tests/fixtures/fastapi/app/services/: account.py
tests/fixtures/graphql/: mutations.py  ts_resolvers.ts
tests/fixtures/linking/: express_app.ts  express_service.ts  fastapi_app.py  fastapi_models.py  fastapi_services.py
tests/fixtures/mutations/: django_orm.py  negative.py  negative.ts  node_orms.ts  prisma.ts  sqlalchemy.py
tests/fixtures/negative/frontend_only/: App.tsx
tests/fixtures/nextjs/app/: route.ts
tests/fixtures/nextjs/app/(.)modal/: route.ts
tests/fixtures/nextjs/app/(admin)/reports/: route.ts
tests/fixtures/nextjs/app/blog/[...slug]/: route.ts
tests/fixtures/nextjs/app/docs/[[...slug]]/: route.ts
tests/fixtures/nextjs/app/dynamic-export/: route.ts
tests/fixtures/nextjs/app/head/: route.js
tests/fixtures/nextjs/app/options/: route.jsx
tests/fixtures/nextjs/app/tsx/: route.tsx
tests/fixtures/nextjs/app/users/[id]/: route.ts
tests/fixtures/nextjs/app/wrapped-named/: route.ts
tests/fixtures/pending/auth_patterns/: express_auth.js  fastapi_auth.py  guards.ts
tests/fixtures/pending/mutations/: django_orm.py  prisma.ts  sqlalchemy.py
tests/fixtures/realistic/express/: app.ts
tests/fixtures/realistic/express/routes/: accounts.ts
tests/fixtures/realistic/express/services/: accounts.ts
tests/fixtures/realistic/fastapi/: main.py
tests/fixtures/realistic/fastapi/app/: models.py
tests/fixtures/realistic/fastapi/app/routers/: accounts.py
tests/fixtures/realistic/fastapi/app/services/: accounts.py
tests/fixtures/trpc/: router.ts
tests/golden/json/: controls_semantic.json  diff_semantic.json  django.json  empty.json  express.json  fastapi.json  frontend_only.json  nextjs.json  realistic_express.json  realistic_fastapi.json  tenant_realistic_express.json
tests/golden/markdown/: controls_semantic.md  diff_semantic.md  django.md  empty.md  express.md  fastapi.md  frontend_only.md  nextjs.md  realistic_express.md  realistic_fastapi.md  tenant_realistic_express.md
