[workspace]
members = [
    "crates/authmap-adapters",
    "crates/authmap-analysis",
    "crates/authmap-cli",
    "crates/authmap-config",
    "crates/authmap-core",
    "crates/authmap-discovery",
    "crates/authmap-parsers",
    "crates/authmap-report",
    "crates/authmap-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Ozark-Security-Labs/AuthMap"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
authmap-adapters = { path = "crates/authmap-adapters" }
authmap-analysis = { path = "crates/authmap-analysis" }
authmap-config = { path = "crates/authmap-config" }
authmap-core = { path = "crates/authmap-core" }
authmap-discovery = { path = "crates/authmap-discovery" }
authmap-parsers = { path = "crates/authmap-parsers" }
authmap-report = { path = "crates/authmap-report" }
authmap-testkit = { path = "crates/authmap-testkit" }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
miette = { version = "7.6", features = ["fancy"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tree-sitter = "0.25"
