[workspace]
members = [
    "crates/authmap-adapters",
    "crates/authmap-analysis",
    "crates/authmap-cli",
    "crates/authmap-config",
    "crates/authmap-core",
    "crates/authmap-discovery",
    "crates/authmap-parsers",
    "crates/authmap-report",
    "crates/authmap-testkit",
]
resolver = "3"

[workspace.package]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://github.com/Ozark-Security-Labs/AuthMap/tree/main/docs"
edition = "2024"
homepage = "https://github.com/Ozark-Security-Labs/AuthMap"
keywords = ["authorization", "cli", "security", "static-analysis"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ozark-Security-Labs/AuthMap"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
authmap-adapters = { version = "0.1.0", path = "crates/authmap-adapters" }
authmap-analysis = { version = "0.1.0", path = "crates/authmap-analysis" }
authmap-config = { version = "0.1.0", path = "crates/authmap-config" }
authmap-core = { version = "0.1.0", path = "crates/authmap-core" }
authmap-discovery = { version = "0.1.0", path = "crates/authmap-discovery" }
authmap-parsers = { version = "0.1.0", path = "crates/authmap-parsers" }
authmap-report = { version = "0.1.0", path = "crates/authmap-report" }
authmap-testkit = { version = "0.1.0", path = "crates/authmap-testkit" }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
miette = { version = "7.6", features = ["fancy"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2.0"
tree-sitter = "0.26"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
jsonschema = { version = "0.46.5", default-features = false }

[workspace.metadata.release]
shared-version = true
allow-branch = ["main"]
