[package]
name = "authmap-cli"
description = "AuthMap command-line interface."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "authmap"
path = "src/main.rs"

[dependencies]
authmap-analysis.workspace = true
authmap-config.workspace = true
authmap-core.workspace = true
authmap-discovery.workspace = true
authmap-report.workspace = true
clap.workspace = true
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema.workspace = true
serde_json.workspace = true
