[package]
name = "authmap-cli"
categories.workspace = true
description = "AuthMap command-line interface."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "authmap"
path = "src/main.rs"

[dependencies]
authmap-analysis.workspace = true
authmap-config.workspace = true
authmap-core.workspace = true
authmap-discovery.workspace = true
authmap-report.workspace = true
clap.workspace = true
miette.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
jsonschema.workspace = true
