[package]
name = "authmap-config"
description = "AuthMap configuration loading and scan planning."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
authmap-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
