[package]
name = "authmap-testkit"
description = "Test helpers for AuthMap fixtures and golden outputs."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
authmap-core.workspace = true
authmap-report.workspace = true
serde_json.workspace = true

[dev-dependencies]
authmap-analysis.workspace = true
authmap-config.workspace = true
